# magazine-maker

./: .env  .gitignore  DESIGN_DOCUMENT.md  package-lock.json  package.json
auto-print/: .env  (+4 more)
line-bot/: .gitignore  README.md  file_service.py  handlers.py  hello.py  line_service.py  main.py  memoir_service.py  openai_service.py  pyproject.toml
line-bot/app/: __init__.py  main.py
line-bot/app/api/: __init__.py  routes.py
line-bot/app/config/: __init__.py  settings.py
line-bot/app/handlers/: __init__.py  webhook_handler.py
line-bot/app/services/: __init__.py  file_service.py  line_service.py  media_memoir_service.py  media_template_schema.py  memoir_service.py  openai_service.py  photo_memoir_service.py  quick_memoir_service.py  vivliostyle_service.py
line-bot/docs/: CHANGELOG.md  README.md  design.md  extended-quick-flow-guide.md  media-template-guide.md  quick-flow-guide.md  troubleshooting-vivliostyle.md  vivliostyle-integration.md  vivliostyle-options.md
line-bot/liff/: edit-media.html  edit.html
line-bot/scripts/: register-existing-files.py
line-bot/templates/memoir/: template.html
line-bot/templates/photo-memoir/: template.html
line-bot/tests/: test_photo_memoir.py
line-bot/uploads/: metadata.json
vivliostyle/: .gitignore  README.md  build-pdf.sh  generate-pdf.js  package-lock.json  package.json  pyproject.toml  requirements.txt  test-modern-templates.py  test_pdf_generation.py  vivliostyle.config.js
vivliostyle/app/: main.py  pdf_service.py  schemas.py  settings.py
vivliostyle/docs/: design.md
vivliostyle/sample/images/: README.md  (+1 more)
(+143 files in other folders)
