[project]
name = "line-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "line-bot-sdk>=3.17.1",
    "uvicorn>=0.34.3",
]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.92.0"
uvicorn = "^0.20.0"
line-bot-sdk = "^2.4.2"
python-dotenv = "^1.0.0"
